--- a/index.html
+++ b/index.html
@@ -27,26 +27,36 @@
                 <section id="graphs">
                     <div id="xp-over-time" class="graph-container">
                         <h2>XP Earned Over Time</h2>
+                        <svg width="600" height="400"></svg>
                     </div>
                     <div id="xp-by-project" class="graph-container">
                         <h2>XP Earned by Project</h2>
+                        <svg width="600" height="400"></svg>
                     </div>
                     <div id="audit-ratio" class="graph-container">
                         <h2>Audit Ratio</h2>
+                        <svg width="300" height="300"></svg>
                     </div>
                     <div id="project-ratio" class="graph-container">
                         <h2>Project Pass/Fail Ratio</h2>
+                        <svg width="300" height="300"></svg>
                     </div>
                     <div id="piscine-stats" class="graph-container">
                         <h2>Piscine Stats</h2>
-                        <div id="piscine-pass-fail"></div>
-                        <div id="piscine-attempts"></div>
+                        <div id="piscine-pass-fail">
+                            <h3>Pass/Fail Ratio</h3>
+                            <svg width="300" height="200"></svg>
+                        </div>
+                        <div id="piscine-attempts">
+                            <h3>Attempts per Exercise</h3>
+                            <svg width="600" height="300"></svg>
+                        </div>
                     </div>
                 </section>
             </main>
         </div>
     </div>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3.js.org/d3.v7.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
