--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     </div>
     <script src="https://d3.js.org/d3.v7.min.js"></script>
     <script src="app.js"></script>
+    <h3>Lol</h3>
 </body>
 </html>
