--- a/index.html
+++ b/index.html
@@ -3,256 +3,136 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile with GraphQL</title>
+  <title>GraphQL Profile</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f4f8;
     }
-    header {
-      background-color: #0044cc;
-      color: white;
-      padding: 15px;
-      text-align: center;
+    #login-container, #profile-container {
+      display: none;
     }
-    h1 {
-      margin: 0;
-    }
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      flex-direction: column;
-    }
-    #login-container {
-      width: 300px;
-      padding: 20px;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-    #login-container input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    #login-container button {
-      width: 100%;
-      padding: 10px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    #login-container button:hover {
-      background-color: #218838;
+    #profile-container {
+      margin-top: 20px;
     }
     #error-message {
       color: red;
-      margin-top: 10px;
-    }
-    #profile-container {
-      display: none;
-      width: 80%;
-      max-width: 600px;
-      padding: 20px;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-    #profile-container h2 {
-      margin-bottom: 20px;
-    }
-    #profile-container .user-info {
-      margin-bottom: 20px;
-    }
-    .logout-btn {
-      background-color: #dc3545;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .logout-btn:hover {
-      background-color: #c82333;
-    }
-    #graphs {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 30px;
-    }
-    svg {
-      width: 150px;
-      height: 150px;
-      margin: 10px;
-    }
-    .graph {
-      text-align: center;
     }
   </style>
 </head>
 <body>
-
-<header>
-  <h1>GraphQL Profile</h1>
-</header>
-
-<div class="container">
   <!-- Login Form -->
   <div id="login-container">
     <h2>Login</h2>
     <form id="login-form">
-      <input type="text" id="username" placeholder="Username or Email" required>
-      <input type="password" id="password" placeholder="Password" required>
+      <label for="username">Username / Email:</label>
+      <input type="text" id="username" name="username" required>
+      <br><br>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+      <br><br>
       <button type="submit">Login</button>
     </form>
-    <div id="error-message"></div>
+    <p id="error-message"></p>
   </div>
 
-  <!-- Profile Page -->
+  <!-- Profile Container -->
   <div id="profile-container">
-    <h2>Welcome, <span id="user-name"></span></h2>
-    <div class="user-info">
-      <p><strong>XP:</strong> <span id="user-xp"></span></p>
-      <p><strong>Skills:</strong> <span id="user-skills"></span></p>
-    </div>
-    <button class="logout-btn" id="logout-btn">Logout</button>
-
-    <div id="graphs">
-      <div class="graph">
-        <h3>XP Progress</h3>
-        <svg id="xp-graph"></svg>
-      </div>
-      <div class="graph">
-        <h3>Project Completion</h3>
-        <svg id="project-graph"></svg>
-      </div>
-    </div>
+    <h2>Your Profile</h2>
+    <div id="user-info"></div>
+    <div id="stats"></div>
+    <button onclick="logout()">Logout</button>
   </div>
-</div>
 
-<script>
-  // Check if the user is already logged in
-  const jwtToken = localStorage.getItem("jwt");
+  <script>
+    // Show login form initially
+    if (!localStorage.getItem("jwt")) {
+      document.getElementById("login-container").style.display = "block";
+    } else {
+      showProfile();
+    }
 
-  if (jwtToken) {
-    document.getElementById("login-container").style.display = "none";
-    document.getElementById("profile-container").style.display = "block";
-    fetchUserProfile(); // Fetch user data once logged in
-  } else {
-    document.getElementById("login-container").style.display = "block";
-    document.getElementById("profile-container").style.display = "none";
-  }
+    // Handle Login Form Submission
+    document.getElementById("login-form").addEventListener("submit", async (event) => {
+      event.preventDefault();
 
-  // Handle Login Form Submission
-  document.getElementById("login-form").addEventListener("submit", async (event) => {
-    event.preventDefault();
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
 
-    const username = document.getElementById("username").value;
-    const password = document.getElementById("password").value;
+      // Base64 encode the credentials for Basic Authentication
+      const base64Credentials = btoa(username + ":" + password);
 
-    // Base64 encode the credentials for Basic Authentication
-    const base64Credentials = btoa(username + ":" + password); // Encode credentials
+      const response = await fetch("https://learn.reboot01.com/api/auth/signin", {
+        method: "POST",
+        headers: {
+          "Authorization": "Basic " + base64Credentials,
+          "Content-Type": "application/json",
+        },
+      });
 
-    const response = await fetch("https://learn.reboot01.com/api/auth/signin", {
-      method: "POST",
-      headers: {
-        "Authorization": "Basic " + base64Credentials,
-        "Content-Type": "application/json",
-      },
-    });
+      const data = await response.json();
 
-    const data = await response.json();
-
-if (response.ok) {
-  // Successful login, save JWT token and redirect to profile page
-  localStorage.setItem("jwt", data.jwt);
-  window.location.reload(); // Reload page to show profile
-} else {
-  // If credentials are invalid, show a specific error message
-  let errorMessage = "Invalid credentials. Please try again.";
-  
-  // Check for more specific error details in the response (if available)
-  if (data.error) {
-    errorMessage = data.error.message || errorMessage;
-  }
-
-  document.getElementById("error-message").textContent = errorMessage;
-}
-});
-
-  // Handle Logout
-  document.getElementById("logout-btn").addEventListener("click", () => {
-    localStorage.removeItem("jwt");
-    window.location.reload(); // Reload page to show login page
-  });
-
-  // Fetch User Profile Data (GraphQL)
-  async function fetchUserProfile() {
-    const query = `
-      query {
-        user {
-          login
-          xp
-          skills {
-            name
-          }
+      if (response.ok) {
+        // Successful login, save JWT token
+        localStorage.setItem("jwt", data.jwt);
+        window.location.reload(); // Reload page to show profile
+      } else {
+        // If credentials are invalid, show a specific error message
+        let errorMessage = "Invalid credentials. Please try again.";
+        
+        // Check for more specific error details in the response (if available)
+        if (data.error) {
+          errorMessage = data.error.message || errorMessage;
         }
-      }
-    `;
 
-    const response = await fetch("https://learn.reboot01.com/api/graphql-engine/v1/graphql", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "Authorization": `Bearer ${jwtToken}`,
-      },
-      body: JSON.stringify({ query }),
+        document.getElementById("error-message").textContent = errorMessage;
+      }
     });
 
-    const data = await response.json();
-    const user = data.data.user;
+    // Fetch profile data and display
+    async function showProfile() {
+      const jwt = localStorage.getItem("jwt");
+      const response = await fetch("https://learn.reboot01.com/api/graphql-engine/v1/graphql", {
+        method: "POST",
+        headers: {
+          "Authorization": "Bearer " + jwt,
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          query: `{
+            user {
+              id
+              login
+            }
+          }`
+        }),
+      });
 
-    // Display User Information
-    document.getElementById("user-name").textContent = user.login;
-    document.getElementById("user-xp").textContent = user.xp;
-    document.getElementById("user-skills").textContent = user.skills.map(skill => skill.name).join(", ");
+      const data = await response.json();
 
-    // Generate Graphs
-    generateGraphs(user.xp);
-  }
+      if (data.errors) {
+        // Handle errors if any
+        console.error("GraphQL Error:", data.errors);
+        return;
+      }
 
-  // Generate SVG Graphs
-  function generateGraphs(xp) {
-    const xpGraph = document.getElementById("xp-graph");
-    const projectGraph = document.getElementById("project-graph");
+      const user = data.data.user;
+      document.getElementById("user-info").innerHTML = `
+        <p><strong>User ID:</strong> ${user.id}</p>
+        <p><strong>Login:</strong> ${user.login}</p>
+      `;
 
-    // Graph 1: Circle representing XP (XP Progress)
-    const circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
-    circle.setAttribute("cx", "75");
-    circle.setAttribute("cy", "75");
-    circle.setAttribute("r", xp / 10); // Radius based on XP
-    circle.setAttribute("fill", "lightblue");
-    xpGraph.appendChild(circle);
+      // You can extend this to display more data like XP, grades, etc.
 
-    // Graph 2: Bar representing Project Completion
-    const rect = document.createElementNS("http://www.w3.org/2000/svg", "rect");
-    rect.setAttribute("x", "20");
-    rect.setAttribute("y", "100");
-    rect.setAttribute("width", xp / 5); // Width based on XP
-    rect.setAttribute("height", "20");
-    rect.setAttribute("fill", "green");
-    projectGraph.appendChild(rect);
-  }
-</script>
+      // Show profile container
+      document.getElementById("login-container").style.display = "none";
+      document.getElementById("profile-container").style.display = "block";
+    }
 
+    // Logout function
+    function logout() {
+      localStorage.removeItem("jwt");
+      window.location.reload();
+    }
+  </script>
 </body>
 </html>
