--- a/index.html
+++ b/index.html
@@ -1,168 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GraphQL Profile</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    #login-container, #profile-container {
-      display: none;
-    }
-    #profile-container {
-      margin-top: 20px;
-    }
-    #error-message {
-      color: red;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png"
+    href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/GraphQL_Logo.svg/2048px-GraphQL_Logo.svg.png" />
+    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/grid-layout.css">
+    <link rel="stylesheet" href="css/line-graph.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/other.css">
+    <link rel="stylesheet" href="css/signIn.css">
+    <link href="https://cdn.jsdelivr.net/npm/gotham-fonts@1.0.3/css/gotham-rounded.min.css" rel="stylesheet">
+    <title>GraphQL</title>
 </head>
+
 <body>
-  <!-- Login Form -->
-  <div id="login-container">
-    <h2>Login</h2>
-    <form id="login-form">
-      <label for="username">Username / Email:</label>
-      <input type="text" id="username" name="username" required>
-      <br><br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-      <br><br>
-      <button type="submit">Login</button>
-    </form>
-    <p id="error-message"></p>
-  </div>
-
-  <!-- Profile Container -->
-  <div id="profile-container">
-    <h2>Your Profile</h2>
-    <div id="user-info"></div>
-    <div id="stats"></div>
-    <button onclick="logout()">Logout</button>
-  </div>
-
-  <script>
-    // Show login form initially
-    if (!localStorage.getItem("jwt")) {
-      document.getElementById("login-container").style.display = "block";
-    } else {
-      showProfile();
-    }
-
-    // Handle Login Form Submission
-    document.getElementById("login-form").addEventListener("submit", async (event) => {
-      event.preventDefault();
-
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-
-      // Base64 encode the credentials for Basic Authentication
-      const base64Credentials = btoa(username + ":" + password);
-
-      const response = await fetch("https://learn.reboot01.com/api/auth/signin", {
-        method: "POST",
-        headers: {
-          "Authorization": "Basic " + base64Credentials,
-          "Content-Type": "application/json",
-        },
-      });
-
-      const data = await response.json();
-
-      if (response.ok) {
-        // Successful login, save JWT token
-        localStorage.setItem("jwt", data.jwt);
-        window.location.reload(); // Reload page to show profile
-      } else {
-        // If credentials are invalid, show a specific error message
-        let errorMessage = "Invalid credentials. Please try again.";
-        
-        // Check for more specific error details in the response (if available)
-        if (data.error) {
-          errorMessage = data.error.message || errorMessage;
-        }
-
-        document.getElementById("error-message").textContent = errorMessage;
-      }
-    });
-
-    // Fetch profile data and display
-    async function showProfile() {
-      const jwt = localStorage.getItem("jwt");
-      const response = await fetch("https://learn.reboot01.com/api/graphql-engine/v1/graphql", {
-        method: "POST",
-        headers: {
-          "Authorization": "Bearer " + jwt,
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          query: `{
-            user {
-              id
-              login
-              firstName
-              lastName
-              transactions(where: { type: { _eq: "xp" }}) {
-                amount
-              }
-              progress {
-                id
-                grade
-              }
-              result {
-                id
-                grade
-              }
-            }
-          }`
-        }),
-      });
-
-      const data = await response.json();
-
-      if (data.errors) {
-        // Handle errors if any
-        console.error("GraphQL Error:", data.errors);
-        return;
-      }
-
-      const user = data.data.user;
-      const transactions = user.transactions;
-      const progress = user.progress;
-      const result = user.result;
-
-      // Calculate XP
-      const totalXP = transactions.reduce((sum, transaction) => sum + transaction.amount, 0);
-
-      // Calculate audit ratio (using grades from progress and result)
-      const totalGrades = progress.length + result.length;
-      const passedGrades = [...progress, ...result].filter(entry => entry.grade > 0).length;
-      const auditRatio = (passedGrades / totalGrades) * 100;
-
-      // Calculate number of completed projects
-      const completedProjects = result.filter(r => r.grade > 0).length;
-
-      document.getElementById("user-info").innerHTML = `
-        <p><strong>User ID:</strong> ${user.id}</p>
-        <p><strong>Full Name:</strong> ${user.firstName} ${user.lastName}</p>
-        <p><strong>Login:</strong> ${user.login}</p>
-        <p><strong>Total XP:</strong> ${totalXP}</p>
-        <p><strong>Audit Ratio:</strong> ${auditRatio.toFixed(2)}%</p>
-        <p><strong>Completed Projects:</strong> ${completedProjects}</p>
-      `;
-
-      // Show profile container
-      document.getElementById("login-container").style.display = "none";
-      document.getElementById("profile-container").style.display = "block";
-    }
-
-    // Logout function
-    function logout() {
-      localStorage.removeItem("jwt");
-      window.location.reload();
-    }
-  </script>
 </body>
+<script type="module" src="./js/graphql.js"></script>
+
 </html>
